@@ -4,16 +4,19 @@ dnl configure.ac file for package jrlCIRdynamicsJRLJapan
 dnl
 AC_PREREQ(2.59)
 
-define([dynamicsJRLJapan_version],[1.6.99])
-dnl define([dynamicsJRLJapan_version], [esyscmd([/usr/bin/git log -n 1 | /bin/grep commit | /usr/bin/awk '{print $2}' | /usr/bin/git describe | /usr/bin/tr -d '\n'])])
-
-AC_INIT([dynamicsJRLJapan], [dynamicsJRLJapan_version], [olivier.stasse@aist.go.jp])
-undefine([dynamicsJRLJapan_version])
+AC_INIT([dynamicsJRLJapan], [1.6.99], [olivier.stasse@aist.go.jp])
 AM_INIT_AUTOMAKE([foreign no-define])
 
 AC_PROG_CXX
 AC_PROG_INSTALL
 AC_PROG_LIBTOOL
+
+dnl Matrix Abstraction Layer
+define(mal_reqd, [MatrixAbstractLayer >= 1.3])
+AC_SUBST(MAL_REQD, "mal_reqd")
+PKG_CHECK_MODULES(MAL, mal_reqd)
+AC_SUBST(MAL_CFLAGS)
+AC_SUBST(MAL_LIBS)
 
 dnl Dynamic Robot Abstract Interface
 define(robotdynamics_reqd, [abstractRobotDynamics >= 1.7])
