@@ -1,4 +1,5 @@
-$Id: ChangeLog 2007/11/08 17:07:56 mallet $
+2007/11/24
+	33. Added dependence to MatrixAbstractLayer (removed from abstractRobotDynamics).
 
 dynamic-JRLJapan 1.6.99 current version
 
